# agentic_rag_with_agno

./: .gitignore  README.md  create_pdf_database.py  embedDB.py  initializeChroma.py  parallel_pro.py  pyproject.toml  query_chroma.py  read_postgres.py  streamlit_with_agno.py  test.py
