[project]
name = "toolkitrefactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.6",
    "aiohttp>=3.12.4",
    "azure-ai-inference>=1.0.0b9",
    "chromadb>=1.0.11",
    "db>=0.1.1",
    "lance>=1.2.1",
    "lancedb>=0.22.1",
    "openai>=1.82.1",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "tantivy>=0.24.0",
]
